Fixes nav on smaller viewports.

--- a/app/assets/stylesheets/controller/pages.scss
+++ b/app/assets/stylesheets/controller/pages.scss
@@ -7,6 +7,7 @@
     border: 5px solid $czig-red;
     border-radius: 5px;
     opacity: .875;
+    padding: 30px;
   }
 }
 
