--- a/app/assets/stylesheets/shared/header.scss
+++ b/app/assets/stylesheets/shared/header.scss
@@ -11,11 +11,9 @@ header {
 
     nav.menu {
       background: none;
-      float: right;
       font-size: 25px;
       height: 100%;
       padding-top: 23px;
-      width: 67%;
 
       a { color: $czig-red; }
 
